--- a/tnc.html
+++ b/tnc.html
@@ -39,33 +39,33 @@ You must follow any policies made available to you within the Services.<br>
 Don’t misuse our Services. Don’t interfere with our Services or try to access them using a method other than the interface and the instructions that we provide and guide. You may use our Services only as permitted by law, including applicable export and re-export control laws and regulations as mentioned. We may suspend or stop providing our Services to you if you do not comply with our terms or policies or if we are investigating suspected misconduct.<br>
 Using our Services does not give you ownership of any intellectual property rights in our Services or the content you access. You may not use content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. Don’t remove, obscure, or alter any legal notices displayed in or along with our Services.<br>
 In connection with your use of the Services, we may send you service announcements, administrative messages, and other information. You may opt out of some of those communications. Some of our Services are available on mobile devices. Do not use such Services in a way that distracts you and prevents you from obeying traffic or safety laws.<br>
-We do our best to keep Liquid.com safe, but we cannot guarantee it. We need your help to keep Liquid.com safe, which includes the following commitments by you:<br>
-1.	You will not post unauthorized commercial communications (such as spam) on Liquid.com.<br>
-2.	You will not collect users' content or information, or otherwise access Liquid.com, using automated means (such as harvesting bots, robots, spiders, or scrapers) without our prior permission.<br>
-3.	You will not engage in unlawful multi-level marketing, such as a pyramid scheme, on Liquid.com.<br>
+We do our best to keep myliquidapp.com safe, but we cannot guarantee it. We need your help to keep myliquidapp.com safe, which includes the following commitments by you:<br>
+1.	You will not post unauthorized commercial communications (such as spam) on myliquidapp.com.<br>
+2.	You will not collect users' content or information, or otherwise access myliquidapp.com, using automated means (such as harvesting bots, robots, spiders, or scrapers) without our prior permission.<br>
+3.	You will not engage in unlawful multi-level marketing, such as a pyramid scheme, on myliquidapp.com.<br>
 4.	You will not upload viruses or other malicious code.<br>
 5.	You will not revel your or someone else identity.<br>
 6.	You will not solicit login information or access an account belonging to someone else.<br>
 7.	You will not bully, intimidate, or harass any user.<br>
 8.	You will not post content that: is hate speech, threatening, or pornographic; incites violence; or contains nudity or graphic or gratuitous violence.<br>
 9.	You will not develop or operate a third-party application containing alcohol-related, dating or other mature content (including advertisements) without appropriate age-based restrictions.<br>
-10.	You will not use Liquid.com to do anything unlawful, misleading, malicious, or discriminatory.<br>
-11.	You will not do anything that could disable, overburden, or impair the proper working or appearance of Liquid.com, such as a denial of service attack or interference with page rendering or other Liquid.com functionality.<br>
+10.	You will not use myliquidapp.com to do anything unlawful, misleading, malicious, or discriminatory.<br>
+11.	You will not do anything that could disable, overburden, or impair the proper working or appearance of myliquidapp.com, such as a denial of service attack or interference with page rendering or other myliquidapp.com functionality.<br>
 You will not facilitate or encourage any violations of this Statement or our policies.<br>
 
 Privacy and Copyright Protection<br>
-1. Our privacy policies explain how we treat your personal data and protect your privacy when you use our Services. By using our Services, you agree that Mukonfes.com can use such data in accordance with our privacy policies.<br>
+1. Our privacy policies explain how we treat your personal data and protect your privacy when you use our Services. By using our Services, you agree that myliquidapp.com can use such data in accordance with our privacy policies.<br>
 We respond to notices of alleged copyright infringement and terminate accounts of repeat infringers according to the process set out in the Indian Copyright Act.<br>
 We provide information to help copyright holders manage their intellectual property online. If you think somebody is violating your copyrights and want to notify us, you can find information about submitting notices or report us through help desk provided.<br>
 
-2. You can upload, share your contents anonymously. Individual can post any text and picture in beta version. Every data provided by user will be private property of company. We will show only their display name to others, which can be changed at any time by user itself. It’s subject of privacy to us. Nobody will be able to access your information. You can even use privacy as for provided utility. Hitherto, being Liquid.com users provides their real names and information, and we need your help to keep it that way. Here are some commitments you make to us relating to registering and maintaining the security of your account:<br>
+2. You can upload, share your contents anonymously. Individual can post any text and picture in beta version. Every data provided by user will be private property of company. We will show only their display name to others, which can be changed at any time by user itself. It’s subject of privacy to us. Nobody will be able to access your information. You can even use privacy as for provided utility. Hitherto, being myliquidapp.com users provides their real names and information, and we need your help to keep it that way. Here are some commitments you make to us relating to registering and maintaining the security of your account:<br>
 
-1.	You will not provide any false personal information on Liquid.com, or create an account for anyone other than yourself without permission.<br>
+1.	You will not provide any false personal information on myliquidapp.com, or create an account for anyone other than yourself without permission.<br>
 2.	You will not create more than one personal account.<br>
 3.	If we disable your account, you will not create another one without our permission.<br>
-4.	You will not use your personal timeline primarily for your own commercial gain, and will use a Liquid.com Page for such purposes.<br>
-5.	You will not use Liquid.com if you are under 13.<br>
-6.	You will not use Liquid.com if you are a convicted sex offender.<br>
+4.	You will not use your personal timeline primarily for your own commercial gain, and will use a myliquidapp.com Page for such purposes.<br>
+5.	You will not use myliquidapp.com if you are under 13.<br>
+6.	You will not use myliquidapp.com if you are a convicted sex offender.<br>
 7.	You will keep your contact information accurate and up-to-date.<br>
 8.	You will not share your password (or in the case of developers, your secret key), let anyone else access your account, or do anything else that might jeopardize the security of your account.<br>
 9.	You will not transfer your account (including any Page or application you administer) to anyone without first getting our written permission.<br>
@@ -74,14 +74,14 @@ If you select a username or similar identifier for your account or Page, we rese
 3. Protecting Other People's Rights <br>
 
 We respect other people's rights, and expect you to do the same.<br>
-1.	You will not post content or take any action on Liquid.com that infringes or violates someone else's rights or otherwise violates the law.<br>
-2.	We can remove any content or information you post on Liquid.com if we believe that it violates this Statement or our policies.<br>
+1.	You will not post content or take any action on myliquidapp.com that infringes or violates someone else's rights or otherwise violates the law.<br>
+2.	We can remove any content or information you post on myliquidapp.com if we believe that it violates this Statement or our policies.<br>
 3.	We provide you with tools to help you protect your intellectual property rights. To learn more, visit our guidelines.<br>
 4.	If we remove your content for infringing someone else's copyright, and you believe we removed it by mistake, we will provide you with an opportunity to appeal.<br>
 5.	If you repeatedly infringe other people's intellectual property rights, we will disable your account when appropriate.<br>
 6.	You will not use our copyrights or Trademarks or any confusingly similar marks, except as expressly permitted by our Brand Usage Guidelines or with our prior written permission.<br>
-7.	If you collect information from users, you will: obtain their consent, make it clear you (and not on Liquid.com) are the one collecting their information, and post a privacy policy explaining what information you collect and how you will use it.<br>
-8.	You will not post anyone's identification documents or sensitive financial information on myLiquidapp.com.<br>
+7.	If you collect information from users, you will: obtain their consent, make it clear you (and not on myliquidapp.com) are the one collecting their information, and post a privacy policy explaining what information you collect and how you will use it.<br>
+8.	You will not post anyone's identification documents or sensitive financial information on myliquidapp.com.<br>
 
 About software<br>
 All the programs used in myonfes.com website and mobile applications are entirely work of people associated with it. You will not copy or try to make anything like this idea. This violates our copyright policy. Any feature added can be terminated by Liquid and new features can be added time to time. User will be informed about it. <br>
@@ -95,26 +95,20 @@ Our goal is to deliver advertising and other commercial or sponsored content tha
 
 Special Provisions Applicable to Advertisers <br>
 
-If you use our self-service advertising creation interfaces for creation, submission and/or delivery of any advertising or other commercial or sponsored activity or content (collectively, the “Self-Serve Ad Interfaces”), you agree to our Self-serve and terms. In addition, your advertising or other commercial or sponsored activity or content placed on Liquid.com or our publisher network will comply with our Advertising guidelines.<br>
+If you use our self-service advertising creation interfaces for creation, submission and/or delivery of any advertising or other commercial or sponsored activity or content (collectively, the “Self-Serve Ad Interfaces”), you agree to our Self-serve and terms. In addition, your advertising or other commercial or sponsored activity or content placed on myliquidapp.com or our publisher network will comply with our Advertising guidelines.<br>
 
 Our warranties and liabilities<br>
 We provide our Services using a commercially reasonable level of skill and care and we hope that you will enjoy using them. But there are certain things that we don’t promise about our Services.<br>
 Other than as expressly set out in these terms or additional terms, neither Mukonsfes.com nor its suppliers or distributors make any specific promises about the Services. For example, we don’t make any commitments about the content within the Services, the specific functions of the Services, or their reliability, availability, or ability to meet your needs. We provide the Services “as is”.<br>
 Some jurisdictions provide for certain warranties, like the implied warranty of merchantability, fitness for a particular purpose and non-infringement. To the extent permitted by law, we exclude all warranties. We specifically tell you that we would not be liable for any warranty or guarantee. Neither the company nor the suppliers and distributors, will not be responsible for lost profits, revenues, or data, financial losses or indirect, special, consequential, exemplary, or punitive damages.<br>
-To the extent permitted by law, the total liability of  Liquid.com, and its suppliers and distributors, for any claims under these terms, including for any implied warranties, is limited to the amount you paid us to use the Services (or, if we choose, to supplying you the Services again).
+To the extent permitted by law, the total liability of  myliquidapp.com, and its suppliers and distributors, for any claims under these terms, including for any implied warranties, is limited to the amount you paid us to use the Services (or, if we choose, to supplying you the Services again).
 In all cases, we, and our suppliers and distributors, will not be liable for any loss or damage that is not reasonably foreseeable.
 We recognize that in some countries, you might have legal rights as a consumer. If you are using the Services for a personal purpose, then nothing in these terms or any additional terms limits any consumer legal rights which may not be waived by contract.<br>
 Business uses of our Services<br>
-If you are using our Services on behalf of a business, that business accepts these terms. It will hold harmless and indemnify Liquid.com and its affiliates, officers, agents, and employees from any claim, suit or action arising from or related to the use of the Services or violation of these terms, including any liability or expense arising from claims, losses, damages, suits, judgments, litigation costs and attorneys’ fees.<br>
-For any further amendments in law, we will keep informing you about the terms and condition as per se through notices. This is a contract between us and you. No third party should raise any issue regarding any issue arise. In furtherance to this if any dispute arises the the courts in some countries will not apply Indian law to some types of disputes. If you reside in one of those countries, then where Indian law is excluded from applying, your country’s laws will apply to such disputes related to these terms. Otherwise, you agree that the laws of India, excluding India’s choice of law rules, will apply to any disputes arising out of or relating to these terms or the Services. Similarly, if the courts in your country will not permit you to consent to the jurisdiction and venue of the courts in Delhi ,India, then your local jurisdiction and venue will apply to such disputes related to these terms. Otherwise, all claims arising out of or relating to these terms or the services will be litigated exclusively in the Delhi, India, and you and Liquid.com consent to personal jurisdiction in those courts.<br>
+If you are using our Services on behalf of a business, that business accepts these terms. It will hold harmless and indemnify myliquidapp.com and its affiliates, officers, agents, and employees from any claim, suit or action arising from or related to the use of the Services or violation of these terms, including any liability or expense arising from claims, losses, damages, suits, judgments, litigation costs and attorneys’ fees.<br>
+For any further amendments in law, we will keep informing you about the terms and condition as per se through notices. This is a contract between us and you. No third party should raise any issue regarding any issue arise. In furtherance to this if any dispute arises the the courts in some countries will not apply Indian law to some types of disputes. If you reside in one of those countries, then where Indian law is excluded from applying, your country’s laws will apply to such disputes related to these terms. Otherwise, you agree that the laws of India, excluding India’s choice of law rules, will apply to any disputes arising out of or relating to these terms or the Services. Similarly, if the courts in your country will not permit you to consent to the jurisdiction and venue of the courts in Delhi ,India, then your local jurisdiction and venue will apply to such disputes related to these terms. Otherwise, all claims arising out of or relating to these terms or the services will be litigated exclusively in the Delhi, India, and you and myliquidapp.com consent to personal jurisdiction in those courts.<br>
 With best regards,
 MyLiquidApp.com<br>
-
-
-
-
-
-
 
 </p>
 				</div>
